--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
           <h2 class="request_header">Картинки по вашему запросу</h2>
           <ul class="gallery" id="gallery-list"></ul>
           <div class="load-more__block">
-            <button class="load-more" id="load-more">
+            <button class="load-more is-hidden" id="load-more">
               Загрузить еще фоток
             </button>
           </div>
