--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
               placeholder="Search images..."
               id="our_keyword"
             />
+            <button class="findPhotosBtn" id="findPhotosBtn">
+              Поиск фоток
+            </button>
           </form>
           <h2 class="request_header">Картинки по вашему запросу</h2>
           <ul class="gallery" id="gallery-list"></ul>
