--- a/src/index.html
+++ b/src/index.html
@@ -43,16 +43,9 @@
               Загрузить еще фоток
             </button>
           </div>
-          <div class="spinner-overlay is-hidden" id="spinner">
-            <div class="sk-chase">
-              <div class="sk-chase-dot"></div>
-              <div class="sk-chase-dot"></div>
-              <div class="sk-chase-dot"></div>
-              <div class="sk-chase-dot"></div>
-              <div class="sk-chase-dot"></div>
-              <div class="sk-chase-dot"></div>
-            </div>
-          </div>
+          <span class="material-icons to_up to_close" id="to_up">
+            arrow_upward
+          </span>
         </div>
       </div>
     </div>
